--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
+    
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to Kokoatalk</h1>
+        <p class="welcome-header__text">if you have a Kokoa Account, log in with your email or phone number</p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number">
+        <input type="text" placeholder="Password">
+        <button>
+            <span>Log In</span>
+        </button>
+        <a href="#">Find Kokoa Account or Password</a>
+    </form>
+    
     <script src="https://kit.fontawesome.com/4d37811b76.js" crossorigin="anonymous"></script>
 </body>
 </html>
