--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <p class="welcome-header__text">if you have a Kokoa Account, log in with your email or phone number</p>
     </header>
 
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number">
-        <input type="text" placeholder="Password">
-        <button>
+    <form action="friends.html" method="get" class="login-form">
+        <input class="login-form__input" type="text" placeholder="Email or phone number">
+        <input class="login-form__input" type="text" placeholder="Password">
+        <button class="login-form__btn">
             <span>Log In</span>
         </button>
-        <a href="#">Find Kokoa Account or Password</a>
+        <a class="login-form__a" href="#">Find Kokoa Account or Password</a>
     </form>
     
     <script src="https://kit.fontawesome.com/4d37811b76.js" crossorigin="anonymous"></script>
