--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,52 @@
-hello
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to kokoa talk</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <div class="status-bar">
+        <div class="status-bar__column">
+            <span>No Service</span>
+            <i class="fa-solid fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+            <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+            <span>200%</span>
+            <i class="fa-solid fa-battery-full fa-lg"></i>
+            <i class="fa-solid fa-bolt"></i>
+        </div>
+    </div>
+    
+    <nav class="nav">
+        <ul class="nav__ul">
+            <li class="nav__li">
+                <a class="nav__a" href="friends.html">
+                    <i class="fa-solid fa-user"></i>
+                </a>
+            </li>
+            <li class="nav__li">
+                <a class="nav__a" href="#">
+                    <i class="fa-regular fa-comment"></i>
+                </a>
+            </li>
+            <li class="nav__li">
+                <a class="nav__a" href="#">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+            </li>
+            <li class="nav__li">
+                <a class="nav__a" href="#">
+                    <i class="fa-solid fa-ellipsis"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <script src="https://kit.fontawesome.com/4d37811b76.js" crossorigin="anonymous"></script>
+</body>
+</html>
