--- a/friends.html
+++ b/friends.html
@@ -26,22 +26,22 @@
         <ul class="nav__ul">
             <li class="nav__li">
                 <a class="nav__a" href="friends.html">
-                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-solid fa-user fa-2x"></i>
                 </a>
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="#">
-                    <i class="fa-regular fa-comment"></i>
+                    <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="#">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                 </a>
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="#">
-                    <i class="fa-solid fa-ellipsis"></i>
+                    <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
         </ul>
