13. Navigation Bar part Three

--- a/friends.html
+++ b/friends.html
@@ -31,6 +31,7 @@
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="#">
+                    <span class="nav__notification">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
@@ -41,6 +42,7 @@
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="#">
+                    <span class="nav__dot"></span>
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
