15. Friends Screen part One

--- a/friends.html
+++ b/friends.html
@@ -34,6 +34,14 @@
             </div>
         </div>
     </header>
+
+    <div class="friends">
+        <a class="friends-name-link">
+            <i class="fa-solid fa-circle-info"></i>
+            Friends' Names Display
+            <i class="fa-solid fa-chevron-right"></i>
+        </a>
+    </div>
     
     <nav class="nav">
         <ul class="nav__ul">
