--- a/chats.html
+++ b/chats.html
@@ -46,6 +46,8 @@
                 </div>
             </div>
             <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <span class="badge">1</span>
             </div>
         </div>
     </main>
@@ -59,7 +61,7 @@
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fa-solid fa-comment fa-2x"></i>
                 </a>
             </li>
