--- a/friends.html
+++ b/friends.html
@@ -71,8 +71,10 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <span>2</span>
-                <i class="fa-solid fa-chevron-right"></i>
+                <div>
+                    <span>2</span>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
             </div>
         </div>
 
@@ -87,7 +89,7 @@
             </li>
             <li class="nav__li">
                 <a class="nav__a" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
