22. Find Screen Part Two

--- a/find.html
+++ b/find.html
@@ -53,6 +53,10 @@
                 <span>Invite</span>
             </div>
         </div>
+        <div class="recommend-friends">
+            <h6 class="recommend-friends__title">Recommend-friends</h6>
+            <span>You have no recommend friends</span>
+        </div>
     </main>
 
     <nav class="nav">
