--- a/find.html
+++ b/find.html
@@ -35,20 +35,20 @@
     </header>
     
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__column">
+        <div class="icons-row">
+            <div class="icons__column">
                 <i class="fa-solid fa-qrcode"></i>
                 <span>QR Code</span>
             </div>
-            <div class="find-icons__column">
+            <div class="icons__column">
                 <i class="fa-regular fa-address-book"></i>
                 <span>Add by Contacts</span>
             </div>
-            <div class="find-icons__column">
+            <div class="icons__column">
                 <i class="fa-solid fa-fingerprint"></i>
                 <span>Add by ID</span>
             </div>
-            <div class="find-icons__column">
+            <div class="icons__column">
                 <i class="fa-regular fa-envelope"></i>
                 <span>Invite</span>
             </div>
