--- a/find.html
+++ b/find.html
@@ -29,7 +29,11 @@
         <div class="screen-header__column">
             <div class="screen-header__icons">
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-                <span><i class="fa-solid fa-gear fa-lg"></i></span>
+                <span>
+                    <a href="setting.html">
+                        <i class="fa-solid fa-gear fa-lg"></i>
+                    </a>
+                </span>
             </div>
         </div>
     </header>
