--- a/chat.html
+++ b/chat.html
@@ -51,6 +51,14 @@
                 </div>
             </div>
         </div>
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message-row__info">
+                    <span class="message-row__info__text">Hi!</span>
+                    <span class="message-row__info__time">21:27</span>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://kit.fontawesome.com/4d37811b76.js" crossorigin="anonymous"></script>
