--- a/chat.html
+++ b/chat.html
@@ -61,6 +61,21 @@
         </div>
     </main>
 
+    <form class="reply">
+        <div class="reply__column">
+            <i class="fa-solid fa-square-plus fa-2x"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a message">
+            <div class="reply__column__right">
+                <i class="fa-regular fa-face-smile-wink"></i>
+                <button>
+                    <i class="fa-solid fa-arrow-up"></i>
+                </button>
+            </div>
+        </div>
+    </form>
+
     <script src="https://kit.fontawesome.com/4d37811b76.js" crossorigin="anonymous"></script>
 </body>
 </html>
