34. Splash Screen part One

--- a/friends.html
+++ b/friends.html
@@ -58,6 +58,7 @@
             <div class="user-component__column">
             </div>
         </div>
+
         <div class="friends-screen__channel">
             <div class="friends-screen__channel__column">
                 <span>Channel</span>
@@ -109,6 +110,10 @@
             </li>
         </ul>
     </nav>
+
+    <div class="splash-screen">
+        <i class="fa-solid fa-comment"></i>
+    </div>
 
     <script src="https://kit.fontawesome.com/4d37811b76.js" crossorigin="anonymous"></script>
 </body>
